--- a/packageDetails.html
+++ b/packageDetails.html
@@ -1,106 +1,40 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <title>Blog Details - Blogy Bootstrap Template</title>
-        <meta name="description" content="">
-        <meta name="keywords" content="">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>View Packages - Blogy Bootstrap Template</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
 
-        <!-- Favicons -->
-        <link href="assets/img/favicon.png" rel="icon">
-        <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-        <!-- Fonts -->
-        <link href="https://fonts.googleapis.com" rel="preconnect">
-        <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-        <!-- Vendor CSS Files -->
-        <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-        <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-        <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-        <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-        <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
-        <!-- Main CSS File -->
-        <link href="assets/css/main.css" rel="stylesheet">
-
-        <!-- =======================================================
-        * Template Name: Blogy
-        * Template URL: https://bootstrapmade.com/blogy-bootstrap-blog-template/
-        * Updated: Feb 22 2025 with Bootstrap v5.3.3
-        * Author: BootstrapMade.com
-        * License: https://bootstrapmade.com/license/
-        ======================================================== -->
-    </head>
-
-<body class="blog-details-page">
+    <!-- Main CSS File -->
+    <link href="assets/css/main.css" rel="stylesheet">
+</head>
+<body class="view-packages-page">
 
 <header id="header" class="header position-relative">
-    <div class="container-fluid container-xl position-relative">
-
-        <div class="top-row d-flex align-items-center justify-content-between">
-            <a href="index.html" class="logo d-flex align-items-end">
-                <!-- Uncomment the line below if you also wish to use an image logo -->
-                <!-- <img src="assets/img/logo.webp" alt=""> -->
-                <h1 class="sitename">Blogy</h1><span>.</span>
-            </a>
-
-            <div class="d-flex align-items-center">
-                <div class="social-links">
-                    <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                    <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                    <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                </div>
-
-                <form class="search-form ms-4">
-                    <input type="text" placeholder="Search..." class="form-control">
-                    <button type="submit" class="btn"><i class="bi bi-search"></i></button>
-                </form>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="nav-wrap">
-        <div class="container d-flex justify-content-center position-relative">
-            <nav id="navmenu" class="navmenu">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="category.html">Category</a></li>
-                    <li><a href="blog-details.html" class="active">Blog Details</a></li>
-                    <li><a href="author-profile.html">Author Profile</a></li>
-                    <li class="dropdown"><a href="#"><span>Pages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                        <ul>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="category.html">Category</a></li>
-                            <li><a href="blog-details.html" class="active">Blog Details</a></li>
-                            <li><a href="author-profile.html">Author Profile</a></li>
-                            <li><a href="search-results.html">Search Results</a></li>
-                            <li><a href="404.html">404 Not Found Page</a></li>
-
-                            <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                                <ul>
-                                    <li><a href="#">Deep Dropdown 1</a></li>
-                                    <li><a href="#">Deep Dropdown 2</a></li>
-                                    <li><a href="#">Deep Dropdown 3</a></li>
-                                    <li><a href="#">Deep Dropdown 4</a></li>
-                                    <li><a href="#">Deep Dropdown 5</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-            </nav>
-        </div>
-    </div>
+    <!-- Header content as provided in your original code -->
 </header>
-<main class="main">
 
+<main class="main">
     <!-- Page Title -->
     <div class="page-title">
         <div class="breadcrumbs">
@@ -108,15 +42,86 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#"><i class="bi bi-house"></i> Home</a></li>
                     <li class="breadcrumb-item"><a href="#">Category</a></li>
-                    <li class="breadcrumb-item active current">Blog Details</li>
+                    <li class="breadcrumb-item active current">View Packages</li>
                 </ol>
             </nav>
         </div>
 
         <div class="title-wrapper">
-            <h1>Blog Details</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+            <h1>View Packages</h1>
+            <p>Explore our packages and activate the ones you need.</p>
         </div>
     </div><!-- End Page Title -->
+
+    <!-- Packages Section -->
+    <section class="packages-section">
+        <div class="container">
+            <div class="row">
+                <!-- Package 1 -->
+                <div class="col-md-4">
+                    <div class="card package-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Basic Package</h5>
+                            <p class="card-text">Includes basic features for small projects.</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Feature 1</li>
+                                <li class="list-group-item">Feature 2</li>
+                                <li class="list-group-item">Feature 3</li>
+                            </ul>
+                            <div class="text-center mt-3">
+                                <button class="btn btn-primary btn-active">Activate</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Package 2 -->
+                <div class="col-md-4">
+                    <div class="card package-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Standard Package</h5>
+                            <p class="card-text">Includes standard features for medium projects.</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Feature 1</li>
+                                <li class="list-group-item">Feature 2</li>
+                                <li class="list-group-item">Feature 3</li>
+                            </ul>
+                            <div class="text-center mt-3">
+                                <button class="btn btn-primary btn-active">Activate</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Package 3 -->
+                <div class="col-md-4">
+                    <div class="card package-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Premium Package</h5>
+                            <p class="card-text">Includes premium features for large projects.</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Feature 1</li>
+                                <li class="list-group-item">Feature 2</li>
+                                <li class="list-group-item">Feature 3</li>
+                            </ul>
+                            <div class="text-center mt-3">
+                                <button class="btn btn-primary btn-active">Activate</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!-- End Packages Section -->
+</main>
+
+<!-- Vendor JS Files -->
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/vendor/aos/aos.js"></script>
+<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+
+<!-- Main JS File -->
+<script src="assets/js/main.js"></script>
 </body>
 </html>
