--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               </ul>
             </li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="corona-free-dark-bootstrap-admin-template-1.0.0/template/pages/samples/register_user.html">Register</a></li>
+            <li><a href="register_user.html">Register</a></li>
             <li><a href="corona-free-dark-bootstrap-admin-template-1.0.0/template/pages/samples/login.html">SingIn</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
