--- a/getPackage.html
+++ b/getPackage.html
@@ -82,7 +82,7 @@
         <div class="col-md-6 border-end">
             <h4><strong>Login for fast check out</strong></h4>
             <p class="text-muted">and multi cart option</p>
-            <button class="btn btn-primary px-4 py-2" id="login">LOGIN</button>
+            <button class="btn btn-primary px-4 py-2" id="login">Register</button>
             <p class="mt-2"><a href="#" class="text-primary">Sign Up for a new Netwave ID</a></p>
         </div>
         <div class="col-md-6">
