--- a/login.html
+++ b/login.html
@@ -1,48 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .login-container {
-            max-width: 400px;
-            margin: 100px auto;
-            padding: 20px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Corona Admin</title>
+    <!-- plugins:css -->
+    <link rel="stylesheet" href="../corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="../corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/css/vendor.bundle.base.css">
+    <!-- endinject -->
+    <!-- Plugin css for this page -->
+    <!-- End plugin css for this page -->
+    <!-- inject:css -->
+    <!-- endinject -->
+    <!-- Layout styles -->
+    <link rel="stylesheet" href="../corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/css/style.css">
+    <!-- End layout styles -->
+    <link rel="shortcut icon" href="../corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/favicon.png" />
 </head>
 <body>
-
-<div class="container">
-    <div class="login-container">
-        <h3 class="text-center">Login</h3>
-        <form>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email">
+<div class="container-scroller">
+    <div class="container-fluid page-body-wrapper full-page-wrapper">
+        <div class="row w-100 m-0">
+            <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
+                <div class="card col-lg-4 mx-auto">
+                    <div class="card-body px-5 py-5">
+                        <h3 class="card-title text-left mb-3">Login</h3>
+                        <form>
+                            <div class="form-group">
+                                <label>Email</label>
+                                <input type="text" class="form-control p_input" id="email">
+                            </div>
+                            <div class="form-group">
+                                <label>Password *</label>
+                                <input type="text" class="form-control p_input" id="password">
+                            </div>
+                            <div class="form-group d-flex align-items-center justify-content-between">
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" class="form-check-input"> Remember me </label>
+                                </div>
+                                <a href="#" class="forgot-pass">Forgot password</a>
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary btn-block enter-btn" id="loginButton">Login</button>
+                            </div>
+                            <div class="d-flex">
+                                <button class="btn btn-facebook mr-2 col">
+                                    <i class="mdi mdi-facebook"></i> Facebook </button>
+                                <button class="btn btn-google col">
+                                    <i class="mdi mdi-google-plus"></i> Google plus </button>
+                            </div>
+                            <p class="sign-up">Don't have an Account?<a href="#"> Sign Up</a></p>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter password">
-            </div>
-            <button type="submit" class="btn btn-primary w-100" id="loginButton">Login</button>
-        </form>
-        <div class="text-center mt-3">
-            <p>Do not have an account? <a href="register.html">Register here</a></p>
+            <!-- content-wrapper ends -->
         </div>
+        <!-- row ends -->
     </div>
+    <!-- page-body-wrapper ends -->
 </div>
-
-<script src="js/jquery.js"></script>
-
+<!-- container-scroller -->
+<!-- plugins:js -->
+<script src="../corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/js/vendor.bundle.base.js"></script>
+<!-- endinject -->
+<!-- Plugin js for this page -->
+<!-- End plugin js for this page -->
+<!-- inject:js -->
+<script src="../corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/off-canvas.js"></script>
+<script src="../corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/hoverable-collapse.js"></script>
+<script src="../corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/misc.js"></script>
+<script src="../corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/settings.js"></script>
+<script src="../corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/todolist.js"></script>
 <script>
     document.getElementById("loginButton").addEventListener("click", function (event) {
         event.preventDefault();
@@ -68,34 +99,36 @@
                     localStorage.setItem("authToken", response.data.token);
 
                     // Fetch user role and redirect accordingly
-                    fetch("http://localhost:8080/api/v1/admin/checkRole", {
+                    return fetch("http://localhost:8080/api/v1/admin/checkRole", {
                         method: "GET",
                         headers: { "Authorization": `Bearer ${response.data.token}` }
-                    })
-                        .then(response => response.json())
-                        .then(roleData => {
-                            if (roleData.role === "ADMIN") {
-                                window.location.href = "corona-free-dark-bootstrap-admin-template-1.0.0/template/index.html";
-                            } else if (roleData.role === "USER") {
-                                window.location.href = "index.html";
-                            } else {
-                                alert("User role not recognized.");
-                            }
-                        })
-                        .catch(error => {
-                            console.error("Error fetching role:", error);
-                            alert("Failed to determine user role.");
-                        });
+                    });
                 } else {
-                    alert(data.message || "Login failed.");
+                    throw new Error(response.data.message || "Login failed.");
                 }
             })
+            .then(response => response.json())
+            .then(response => {
+                console.log("Role API Response:", response); // Debugging
+
+                let role = response.role; // Extract role from response
+
+                if (role === "ADMIN") {
+                    window.location.href = "../corona-free-dark-bootstrap-admin-template-1.0.0/template/index.html";
+                } else if (role === "User") {
+                    window.location.href = "../../../../index.html";
+                } else {
+                    alert("User role not recognized: " + role);
+                }
+            })
+
             .catch(error => {
                 console.error("Login error:", error);
                 alert("Login failed. Please try again.");
-            });
+            }); // Properly closing the entire promise chain
     });
-</script>
 
+</script>
+<!-- endinject -->
 </body>
 </html>
